# CNN-for-Satellite-Image-Classification

./: .dockerignore  .gitignore  Dockerfile  LICENSE.txt  README.md  READNME.md  deploy.txt  main.py  pyproject.toml  requirements.txt
app/: main.py
app/api/: endpoints.py
app/core/: config.py
app/ml/: predictor.py  utils.py
app/ml/models/: cnn_ship_classifier_model.py
app/schemas/: prediction.py
tests/: model_test_weights_v1.pth  test_api.py  test_ml.py
